--- a/TESTS_ADS_2022_LinkedList_SingleFromScratch/TESTS_ADS_2022_LinkedList_SingleFromScratch.vcxproj
+++ b/TESTS_ADS_2022_LinkedList_SingleFromScratch/TESTS_ADS_2022_LinkedList_SingleFromScratch.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="TESTS_ADS_2022_LinkedList_SingleFromScratch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
