:sparkles: Feature - Adding SList

--- a/ADS_2022_LinkedList_SingleFromScratch/ADS_2022_LinkedList_SingleFromScratch.vcxproj
+++ b/ADS_2022_LinkedList_SingleFromScratch/ADS_2022_LinkedList_SingleFromScratch.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="ADS_2022_LinkedList_SingleFromScratch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SList.h" />
     <ClInclude Include="SNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
