--- a/ADS_2022_LinkedList_SingleFromScratch/ADS_2022_LinkedList_SingleFromScratch.vcxproj.filters
+++ b/ADS_2022_LinkedList_SingleFromScratch/ADS_2022_LinkedList_SingleFromScratch.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="SNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
