--- a/TESTS_ADS_2022_LinkedList_SingleFromScratch/TESTS_ADS_2022_LinkedList_SingleFromScratch.vcxproj
+++ b/TESTS_ADS_2022_LinkedList_SingleFromScratch/TESTS_ADS_2022_LinkedList_SingleFromScratch.vcxproj
@@ -162,7 +162,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="TESTS_ADS_2022_LinkedList_SingleFromScratch.cpp" />
+    <ClCompile Include="TESTS_SLIST.cpp" />
+    <ClCompile Include="TESTS_SNODE.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
