--- a/TESTS_ADS_2022_LinkedList_SingleFromScratch/TESTS_ADS_2022_LinkedList_SingleFromScratch.vcxproj.filters
+++ b/TESTS_ADS_2022_LinkedList_SingleFromScratch/TESTS_ADS_2022_LinkedList_SingleFromScratch.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TESTS_ADS_2022_LinkedList_SingleFromScratch.cpp">
+    <ClCompile Include="TESTS_SNODE.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TESTS_SLIST.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
